# matsuri_official_site

./: deploy.sh  package-lock.json  package.json
public/: index.html
src/: App.js  index.css
src/components/card/CategoryCard/: index.js
src/components/card/FlierCard/: index.js
src/components/layout/BasicLayout/: index.js  index.module.css
src/data/: archive.js  event.js
src/enums/: artist.js
src/pages/404/: index.js
src/pages/archive/: index.js  index.module.css
src/pages/event/: index.js  index.module.css
src/pages/top/: index.css  index.js  index.module.css
version1/: deploy.sh  package.json
version1/public/: index.html
version1/src/: App.js
version1/src/components/card/FlierCard/: index.js
version1/src/data/: archive.js  event.js
version1/src/enums/: artist.js
version1/src/pages/event/: index.js
version1/src/pages/top/: index.js
version1/src/pages/twitch/: index.js
version2/: memo.md
version2/backend/: .gitignore  Cargo.toml
version2/backend/cdk/: cdk.context.json  package-lock.json  package.json
version2/backend/cdk/lib/: server-stack.ts
version2/backend/common/: Cargo.toml
version2/backend/common/src/: dynamodb.rs  google.rs  lib.rs  media.rs
version2/backend/server/: Cargo.toml
version2/backend/server/src/: auth.rs  event.rs  lib.rs  main.rs  media.rs  performance.rs  session.rs
version2/backend/src/: auth.rs  dynamodb.rs  event.rs  google.rs  lib.rs  main.rs  media.rs  performance.rs  session.rs
version2/backend/work/: Cargo.toml
version2/frontend/: .env.production  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
version2/frontend/app/: page.tsx
version2/frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx
version2/frontend/src/lib/: atom.ts  type.tsx
version2/frontend/src/lib/atom/: auth.ts  common.ts  event.ts  performance.ts
version2/frontend/src/lib/component/: breadcrumb.tsx  card.tsx  error.tsx
version2/frontend/src/lib/util/: date.ts  path.ts  request.ts
version2/frontend/src/page/: ai.tsx  archive.tsx  dekamori.tsx  event.tsx  home.tsx  performance.tsx  search.tsx  watchparty.tsx
