[package]
name = "matsuri-official-site-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.8"
tokio = { version = "1.41.1", features = ["full"] }
lambda_http = "0.13.0"
serde_json = "1.0.132"
dotenvy = "0.15.7"
url = "2.5.3"
serde = { version = "1.0.215", features = ["derive"] }
tower = "0.5.1"
tower-sessions = "0.13.0"
time = "0.3.36"
tracing = "0.1.40"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.54.0"

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["json", "rustls-tls"]
