[package]
name = "matsuri-official-site-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
