[package]
name = "matsuri-official-site-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
