[package]
name = "matsuri-official-site-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
lambda_http = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }

matsuri-official-site-common = { path = "../common" }
